--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,32 +19,11 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><a href="http://www.moh.gov.zm">MOH Home</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">NGO partners <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="http://www.unicef.org">UNICEF</a></li>
-            <li><a href="http://www.wfp.org">WFP</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-      </li>
+      <li><a href="https://www.facebook.com/mohzambia">MOH Home</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Sign In</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
+
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
@@ -53,7 +32,7 @@
     <div class="container">
       <h2>Vaccine Inventory Tracking + Management System</h2>
       <p>For Ministry of Health administrators</p>
-      <p><a class="btn btn-primary btn-lg" role="button" href="/input/index">Input vaccine inventory</a></p>
+      <p><a class="btn btn-primary btn-lg" role="button" href="/input/index">Input vaccine inventory change</a></p>
 
     </div>
   </div>
@@ -61,16 +40,12 @@
   <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-6">
+         <div class="container">
           <h2>Inventory analysis</h2>
-          <p>A variety of vaccine inventory calculations can be computed to provide customized data summaries </p>
+          <p>An analysis can be run on current vaccine inventory information for the country of Zambia; analyses current include a vaccine count by province </p>
           <p><a class="btn btn-info btn-md" href="/analysis/index" role="button"><span class="glyphicon glyphicon-plus"></span> Analyze &raquo;</a></p>
         </div>
-        <div class="col-md-6">
-          <h2>Intervention needs</h2>
-          <p>Locations requiring interventions as determined by pre-set MoH guidelines will be highlighted with intervention details</p>
-          <p><a class="btn btn-info btn-md" href="/intervention/index" role="button"><span class="glyphicon glyphicon-pushpin"></span> Act &raquo;</a></p>
-       </div>
+
 
       </div>
 
